# package-python-rs-anomaly-identification

./: .gitignore  README.md  pyproject.toml
data/NC_files/Field_213/: S2L2A.field_213.20170101.20171201.cldt08.cldf005.cldp01.nc  S2L2A.field_213.20180101.20181201.cldt08.cldf005.cldp01.nc  S2L2A.field_213.20190101.20191201.cldt08.cldf005.cldp01.nc  S2L2A.field_213.20200101.20201201.cldt08.cldf005.cldp01.nc  S2L2A.field_213.20210101.20211201.cldt08.cldf005.cldp01.nc  S2L2A.field_213.20220101.20221201.cldt08.cldf005.cldp01.nc  (+1 more)
data/Parquet_files/: id_field_213.parquet
data/Pickled_files/: norm_213.pickle
data/raw/: AD_US_131_fields.geojson
models/: pd_regressor_5.1_high.joblib  pd_regressor_5.1_high.json  pd_regressor_5.1_low.joblib  pd_regressor_5.1_low.json  pd_regressor_5.1_mid.joblib  pd_regressor_5.1_mid.json  pre_classifier.joblib  pre_classifier.pkl
notebooks/: Example.ipynb  download_data.ipynb  normalize_seasons.ipynb
sagemaker/anomaly_prediction/: anomaly_prediction.py
sagemaker/feature_engineering/: feature_engineering.py
sagemaker/pdf_estimation/: pdf_estimation.py
sagemaker/time_series_clustering/: clustering.py
scripts/: download_data.py  normalize_seasons.py  user_config.py  utils.py
src/: config.py  data_downloader.py  normalization_builder.py  timeseries_builder.py
src/Anomaly_calculation/: anomaly_calculation.py
src/functions/: interpolation_functions.py  statistical_functions.py
src/processing/: KDE_estimation.py  image_processing.py
src/time_series_clustering/: clustering.py
tests/: test_normalization.py
(+2 files in other folders)
